--- a/investigacion.tex
+++ b/investigacion.tex
@@ -123,11 +123,6 @@ Los qubits son reales, y varios sistemas físicos se pueden utilizar para hacer 
 La representación geométrica de un qubit se puede apreciar en la figura 1.1
 Me falta meter la foto hu3hu3hu3. Hay que ponerle el full file path o algo,  y prefiero hacerlo al final. 
 
-\begin{comment}
-This is my comment.
-Note that it can span multiple lines.
-This is very useful.
-
 \part{Computación Cuántica}
 \index{Computación Cuántica}
 Los cambios que le suceden a un estado cuántico se pueden describir usando la computación cuántica. De la misma manera que una computadora clásica está construida con base en circuitos lógicos, una computadora cuántica se basa en circuitos cuánticos con compuertas cuánticas elementales.
@@ -138,54 +133,56 @@ Su tabla de verdad está descrita en el Cuadro 1.
 
 Cuadro 1: Tabla de verdad de NOT
 \begin{center}
-    \begin{tabular}{ | 1 | 1 | }
-    \hline
-    x & NOT x  \\ \hline
-    0 & 1\\ \hline
-    1 & 0 \\ \hline
+    \begin{tabular}{ c | c }
+    x & NOT x \\ 
+	\hline
+    0 & 1\\ 
+    1 & 0 \\ 
     \end{tabular}
 \end{center}
 
-Al usar qubits, tener un NOT que cambie de \vert 0\rangle a \vert 1\rangle y viceversa no establece qué sucede en los estados de superposición. 
+Al usar qubits, tener un NOT que cambie de $\vert 0\rangle$ a $\vert 1\rangle$ y viceversa no establece qué sucede en los estados de superposición. 
 El NOT funciona de una manera lineal porque toma el estado 
- \alpha \vert 0\rangle + \beta \vert 1\rangle
- y lo modifica hasta que los papeles del \vert 0\rangle y \vert 1\rangle estén completamente intercambiados. 
-  \alpha \vert 1\rangle + \beta \vert 0\rangle. 
+ $\alpha \vert 0\rangle + \beta \vert 1\rangle$
+ y lo modifica hasta que los papeles del $\vert 0\rangle$ y $\vert 1\rangle$ estén completamente intercambiados. 
+  $\alpha \vert 1\rangle + \beta \vert 0\rangle$. 
 Las compuertas cuánticas NOT se pueden describir en matrices de 2x2 (surge directamente de la linealidad). Supongamos que la X representa una compuerta NOT. 
-X \equiv \begin{bmatrix}
+$X \equiv \begin{bmatrix}
 		\ 0 & 1
 		\ 1 & 0
-	      \end{bmatrix}
-Si escribimos el estado cuántico \alpha \vert 0\rangle + \beta \vert 1\rangle en notación vectorial
+	      \end{bmatrix}$
+Si escribimos el estado cuántico $\alpha \vert 0\rangle + \beta \vert 1\rangle$ en notación vectorial
+$
 \begin{bmatrix}
  \ \alpha
  \ \beta
  \end{bmatrix}
+$
 la salida del NOT cuántico es 
-X \begin{bmatrix} 
+$X \begin{bmatrix} 
      \ \alpha
      \ \beta
  \end{bmatrix}
  = \begin{bmatrix}
  \ \beta
  \ \alpha
- \end{bmatrix}.
+ \end{bmatrix}$.
  
 La acción de un NOT es tomar el estado 0 y reemplazarlo por el estado correspondiente a la primera columna de la matriz X. De igual manera el estado 1 es reemplazado por el estado correspondiente a la segunda columna de la matriz X. 
 
 Hay dos otras compuertas de un qubit importantes. 
 La primera es la compuerta Z. 
-Z = \begin{bmatrix}
+$Z = \begin{bmatrix}
  \ 1 & 0
  \ 0 & -1
- \end{bmatrix}.
+ \end{bmatrix}$.
 Esta compuerta deja el 0 sin modificar y cambia el signo de 1 a -1.
 
 La segunda es la compuerta Hadamard.
-H =  \frac{1}{\sqrt{2}}  \begin{bmatrix}
+$H =  \frac{1}{\sqrt{2}}  \begin{bmatrix}
              \ 1 & 1
              \ 1 & 1
-           \end{bmatrix}.
+           \end{bmatrix}$.
 
 \section*{Compuertas con múltiples qubits}
 CONTROLLED NOT
@@ -201,19 +198,24 @@ El CNOT y las compuertas de un qubit son los prototipos necesarios para hacer cu
 ¿Podemos simular circuitos con compuertas clásicas usando circuitos cuánticos? La respuesta es sí. Sin embargo, la mayoría de las compuertas cuánticas son reversibles, mientras las compuertas clásicas son irreversibles. (Nielsen, 2010, p.29)
 Cualquier circuito clásico puede ser reemplazado por uno equivalente construido únicamente con elementos reversibles, utilizando la \textit{compuerta Toffoli}. La compuerta Toffoli tiene tres bits de entrada y tres de salida. Dos de esos bits son de control y no los afecta la acción de la compuerta en sí. El tercero es un bit que es "flippeado" , si las dos líneas de control están activadas. Aplicar dos veces la compuerta Toffoli a un bit hace que se revierta al estado original porque su inversa es sí misma. (Nielsen, 2010, p.29)
 La compuerta Toffoli se puede utilizar para simular compuertas NAND. (Nielsen, 2010, p.29)
-\end{comment}
 
 \section*{Superposición y Entrelazamiento cuántico}
 El entrelazamiento cuántico es uno de los fenómenos más extraños y sorprendentes de la mecánica cuántica. No es un concepto nuevo, la propuesta del entrelazamiento se remonta hacia los años 30 donde la teoría cuántica comenzaba por desarrollarse. Como es natural esta teoría tenía quiénes la refutaran, entre ellos Einstein.
 
-Pero dejemos un momento a Einstein y definamos básicamente el concepto de entrelazamiento. Para hacerlo de una forma comprendible vamos a referirnos a la analogía propuesta por Aczel (año). Esta nos propone que imaginemos que Alice y Bob están casados. Cuando Alice se va de viaje Bob conoce a Carol. Carol está casada con Dave, quién también está fuera de la ciudad. Entonces Bob y Carol se olvidan de sus esposos y se entrelazan profundamente. Por una extraña razón Alice y Dave se encuentran y ellos también se entrelazan sin siquiera saber por qué. Entonces si cambiamos las personas por partículas: A, B, C, D y si sabemos que A y B están entrelazadas al igual que C con D  entonces podemos entrelazar A con D por medio de entrelazar a B con C. (p. 2)
+Pero dejemos un momento a Einstein y definamos básicamente el concepto de entrelazamiento. Para hacerlo de una forma comprendible vamos a referirnos a la analogía propuesta por Aczel (2001). Esta nos propone que imaginemos que Alice y Bob están casados. Cuando Alice se va de viaje Bob conoce a Carol. Carol está casada con Dave, quién también está fuera de la ciudad. Entonces Bob y Carol se olvidan de sus esposos y se entrelazan profundamente. Por una extraña razón Alice y Dave se encuentran y ellos también se entrelazan sin siquiera saber por qué. Entonces si cambiamos las personas por partículas: A, B, C, D y si sabemos que A y B están entrelazadas al igual que C con D  entonces podemos entrelazar A con D por medio de entrelazar a B con C. (p. 2)
 
-Entonces, si dos partículas están entrelazas, no importa cuán lejos estén siempre van a estar unidas. Hay una relación intrínseca entre las dos que no las deja separarse. Evidentemente esto suena absurdo bajo nuestra física clásica. Es aquí donde Albert Einstein, Boris Podolski y Nathan Rosen proponen en 1935 una paradoja (llamada paradoja EPR) que viene a criticar a la mecánica cuántica. 
+Entonces, si dos partículas están entrelazas, no importa cuán lejos estén siempre van a estar unidas. Hay una relación intrínseca entre las dos que no las deja separarse. Evidentemente esto suena absurdo bajo nuestra física clásica. Es en este contexto donde Albert Einstein, Boris Podolski y Nathan Rosen proponen en 1935 una paradoja (llamada paradoja EPR) que viene a criticar a la mecánica cuántica. 
 
 Esta paradoja, a grandes rasgos, supone dos partículas P y Q que están entrelazadas. Además propone que si dos individuos observan esa partícula van a tener dos medidas distintas, esto por la naturaleza de una partícula cuántica. Por tanto, concluyen que esta medición no describe la realidad física de la partícula y por consiguiente la teoría cuántica es una teoría incompleta. A(Abala, 2007, pp. 7-11)
 
 Luego de esto, en 1964 John Bell desarrolla una forma con la cual comprobar la paradoja anteriormente descrita. Bell se basa en los principios del determinismo y la localidad para crear unas desigualdades. Si estan son validadas entonces la paradoja se cumple. Gracias a este trabajo varios grupos de investigadores continuaron el análisis del entrelazamiento y en 1972 dos físicos americanos dieron pruebas de la existencia del entrelazamiento. (Aczel, 2001, p. xvi)
 
+Entonces, el entrelazamiento viene a ser una aplicación de un concepto desarrollado en el pasado llamado el \textit{principio de superposición de estados}. Aczel (2001) lo presenta como:
+\begin{quote}
+El principio de superposición dice que un nuevo estado de un sistema puede estar compuesto por dos o más estados, de manera tal que el nuevo estado comparta algunas de las propiedades de los estados combinados. Si A y B atribuyen dos propiedades diferentes a una partícula, como la de estar en dos distintos lados, entonces la \textit{superposición} de estados, escrita como $A + B$, tiene algo en común con el estado A y el estado B. En particular, la partícula tendrá probabilidades distintas de cero de estar en cada uno de los dos estados, pero no en otra parte, si la posición de la partícula es observada. (p. 25)
+
+El entrelazamiento consiste en un sistema formado por dos o más subsistemas. En este caso el subsistema corresponde a una partícula. Veamos entonces qué significa decir que dos partículas están entrelazadas. Supongamos una partícula 1. Esta puede estar en dos estados: A y C. Estos estados manifiestan dos propiedades contradictorias como lo es el estar en dos lugares a la vez. Por otro lado, la partícula 2 puede estar en dos estados: B y D. De igual forma estos dos estados presentar la propiedad contradictoria de estar en dos lugares distintos. El estado AB es un producto de estados. Cuando el sistema completo esta en AB sabemos que la partícula 1 esta en A y la partícula 2 está en B. Analógicamente, con el estado CD. Observemos entonces el estado $AB + CD$. Este estado representa la aplicación del principio de superposición en todo el sistema de dos partículas. Como el principio permite este comportamiento de combinación de estados, el estado $AB + CD$ es llamado un \textit{estado entrelazado}. (Aczel, 2001, p. 26)
+\end{quote}
 
 
 \clearpage
